[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/Font_30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
/fonts/Font = ExtResource( 1 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
LineEdit/fonts/font = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1279.0
margin_bottom = 1025.0
theme = SubResource( 1 )

[node name="Start_Button" type="Button" parent="Control"]
anchor_left = 0.40344
anchor_top = 0.476098
anchor_right = 0.655199
anchor_bottom = 0.546341
text = "Start"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit_Button" type="Button" parent="Control"]
anchor_left = 0.405004
anchor_top = 0.612683
anchor_right = 0.657545
anchor_bottom = 0.657561
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Player_Name" type="LineEdit" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.5
margin_top = 382.0
margin_right = 173.5
margin_bottom = 436.0
align = 1
max_length = 10
placeholder_text = "Player nickname"

[connection signal="pressed" from="Control/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Control/Quit_Button" to="." method="_on_Quit_Button_pressed"]
